# bevy_snake1

./: Cargo.toml  README.md  index.html
src/: main.rs
